--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <img class="d-block w-100" src="ngo4.jpg" alt="Third slide" width="1600px" height="550px">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="ngo5.jpg" alt="Third slide" width="1600px" height="550px">
+        <img class="d-block w-100" src="ngo5.jpg" alt="Third slide" width="1600px" height="549px">
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="pic1.jpg" alt="Third slide" width="1600px" height="550px">
@@ -73,7 +73,7 @@
     </a>
     <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
+      <span class="sr-only"> Next </span>
     </a>
   </div>
   <br>
@@ -83,9 +83,9 @@
       <div class="row">
         <div class="col-sm-6">
           <div class="section_title">
-            <div class="section_subtitle" id="about">About Us</div>
+            <div class="section_subtitle" id="about"> About Us </div>
             <div class="section_main_title">
-              WE ARE <strong> CREATIVE</strong>
+              WE ARE <strong> CREATIVE </strong>
             </div>
             <div class="about-item">
               <p>Back in 2004, Our Founder and President Mr. Mrinal Kanti Bhanja noticed a very common problem: “About
@@ -132,7 +132,7 @@
           <div class="card" style="width: 22rem;border: 2px solid black;margin: 20%;padding: 5px; height: 80%;">
             <img class="card-img-top" src="img3.jpg" alt="Card image cap" style="height: 200px;"><i class="fas fa-eye" style="font-size: 30px;text-align: center;margin-top: 15px;color: green;"></i>
             <div class="card-body">
-              <h5 class="card-title" style="color: #9A1750;text-align: center;font-size: 30px;text-decoration: underline;">Our Vision</h5>
+              <h5 class="card-title" style="color: #9A1750;text-align: center;font-size: 30px;text-decoration: underline;"> Our Vision </h5>
               <p class="card-text" style="color: #273c75; margin-top: 28px;">We aim to build a network of autonomous student-run centers across India, to provide them with a platform for ensuring the fulfillment of Sustainable Development Goals for the weaker sections of the Society..</p>
               
             </div>
@@ -188,7 +188,7 @@
 
                         <div class="form-group">
                             <div class="col-md-12 text-center">
-                                <button type="submit" class="btn btn-primary btn-lg" style="margin-right: 30%;">Submit</button>
+                                <button type="submit" class="btn btn-primary btn-lg" style="margin-right: 30%;">Submit it</button>
                             </div>
                         </div>
                     </fieldset>
@@ -198,7 +198,7 @@
     </div>
 </div>
   <div class="footer">
-    <p>&copy; Made By Shikhar Singhal<br>LiGHT Web Team GYWS<br>TASK 3</p>
+    <p>&copy; Made By Shikhar Singhal <br>LiGHT Web Team GYWS<br>TASK 3</p>
   </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
